[JAVA 9] : ajout de --add-opens pour la deep reflection